# langwordstrainer-proto-desctop

./: .gitignore  Cargo.toml  README.md  build.rs
src/: constants.rs  entity.rs  functions.rs  main.rs
